--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "echo 'No build needed'",
     "start": "node index.js"
   },
   "dependencies": {
