Migrate Room 1/2 from WebRTC to LiveKit
- Replace custom WebRTC P2P mesh with LiveKit SFU
- Add livekit-client for frontend video/audio rooms
- Add livekit-server-sdk for token generation
- Simplify Room1VideoOnly (video) and Room2AudioOnly (audio)
- Add LiveKit token endpoint to server (/livekit/token)
- Remove WebRTC signaling code (rtc_offer, rtc_answer, rtc_ice_candidate)
- Add LiveKit configuration file (src/config/livekit.js)

Benefits:
- More stable connections (SFU vs P2P mesh)
- Automatic reconnection and NAT traversal
- Scalable to 10+ concurrent users
- Significantly reduced code complexity

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "livekit-client": "^2.16.1",
+    "livekit-server-sdk": "^2.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "ws": "^8.18.0"
