--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "livekit-server-sdk": "^2.9.1",
     "ws": "^8.18.0"
   },
   "engines": {
