feat: voice changer

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "@soundtouchjs/audio-worklet": "^0.2.1",
     "livekit-client": "^2.16.1",
     "livekit-server-sdk": "^2.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "soundtouchjs": "^0.2.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
