--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@soundtouchjs/audio-worklet": "^0.2.1",
     "livekit-client": "^2.16.1",
     "livekit-server-sdk": "^2.15.0",
